--- a/config/database.yml
+++ b/config/database.yml
@@ -7,24 +7,24 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  username: root
-  password: 
-  host: 127.0.0.1
-  port: 3306
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
+  port: <%= ENV["PORT"] %>
 
 development:
   <<: *default
-  database: burner_games_development
+  database: <%= ENV["DATABASE_NAME"]+"_development" %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: burner_games_test
+  database: <%= ENV["DATABASE_NAME"]+"_test" %>
 
 production:
   <<: *default
-  database: burner_games
+  database: <%= ENV["DATABASE_NAME"] %>
 
 
