--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  database: <%= ENV["DATABASE_NAME"] + "_test" %>
   <<: *default
 
 production:
