--- a/config/database.yml
+++ b/config/database.yml
@@ -5,16 +5,20 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
+  pool: 5
   encoding: utf8
   username: <%= ENV["DATABASE_USERNAME"] %>
   password: <%= ENV["DATABASE_PASSWORD"] %>
   database: <%= ENV["DATABASE_NAME"] %>
-  host: <%= ENV["DATABASE_HOST"] %>
-  port: <%= ENV["DATABASE_PORT"] %>
+  # host: <%= ENV["DATABASE_HOST"] %>
+  # port: <%= ENV["DATABASE_PORT"] %>
 
 development:
   <<: *default
 
 production:
+  <<: *default
+
+test:
   <<: *default
