Updates:  - updated to ruby-2.1.3  - removed invalid credentials commited to the repo (thanks Daniel)  - moved back to mysql (from pg) of easier deployment and using exsiting infrastructure

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,20 @@
-DATABASE_HOST=127.0.0.1
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=
+# db host
+DATABASE_HOST=localhost
+
+# app's db user
+DATABASE_USERNAME=username
+
+# app's db password
+DATABASE_PASSWORD=password
+
+# db host mysql port
 DATABASE_PORT=3306
-DATABASE_NAME=burner_games
+
+# db's database name
+DATABASE_NAME=burner_games_development
+
+# RailsAdmin user access
+RAILS_ADMIN_USERNAME=admin
+
+# RailsAdmin password access
+RAILS_ADMIN_PASSWORD=password
