update rails, remove 'spring' gem

--- a/.env-example
+++ b/.env-example
@@ -18,3 +18,7 @@ RAILS_ADMIN_USERNAME=admin
 
 # RailsAdmin password access
 RAILS_ADMIN_PASSWORD=password
+
+# Games parmas
+QUESTIONS_IN_CATEGORY=5
+CATEGORIES_IN_GAME=2
