game completed drupal integration

--- a/.env-example
+++ b/.env-example
@@ -18,3 +18,12 @@ RAILS_ADMIN_USERNAME=admin
 
 # RailsAdmin password access
 RAILS_ADMIN_PASSWORD=password
+
+# Games parmas
+QUESTIONS_IN_CATEGORY=5
+CATEGORIES_IN_GAME=5
+
+# Drupal integration
+DRUPAL_API_BASE=https://profile-test.midburn.org/en/api
+DRUPAL_ADMIN_USERNAME=games@midburn.org
+DRUPAL_ADMIN_PASSWORD=password
