--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@
 ##########################################################################################
 
 development:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   database: <%= ENV["DATABASE_NAME"] %>
   username: <%= ENV["DATABASE_USER"] %>
@@ -19,10 +19,16 @@ development:
   port: <%= ENV["DATABASE_POST"] %>
 
 production:
+  adapter: postgresql
   encoding: utf8
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
+  port: <%= ENV["DATABASE_POST"] %>
 
 test:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   database: <%= ENV["DATABASE_NAME"] %>
   username: <%= ENV["DATABASE_USER"] %>
